--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,15 @@
     "start": "node server",
     "dev": "nodemon server"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "openai": "^5.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
